force-app/main/default/objects/ssot__Account__dlm/fields/Campagne_Google_Ads__c.field-meta.xml
<CustomField>
    <fullName>Campagne_Google_Ads__c</fullName>
    <label>Campagne Google Ads</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Campagne Google Ads</labelOverride>
        <masterLabel>Campagne Google Ads</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>