force-app/main/default/objects/ssot__Account__dlm/fields/Categorie_d_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Categorie_d_entreprise__c</fullName>
    <label>Catégorie d&apos;entreprise</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Catégorie d&apos;entreprise</labelOverride>
        <masterLabel>Catégorie d&apos;entreprise</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>