force-app/main/default/objects/ssot__Account__dlm/fields/Code_APE2008__c.field-meta.xml
<CustomField>
    <fullName>Code_APE2008__c</fullName>
    <label>Code APE2008</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Code APE2008</labelOverride>
        <masterLabel>Code APE2008</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>