force-app/main/default/objects/ssot__Account__dlm/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <label>Commentaire</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Commentaire</labelOverride>
        <masterLabel>Commentaire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>