force-app/main/default/objects/ssot__Account__dlm/fields/CSPE__c.field-meta.xml
<CustomField>
    <fullName>CSPE__c</fullName>
    <label>CSPE</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CSPE</labelOverride>
        <masterLabel>CSPE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>