force-app/main/default/objects/ssot__Account__dlm/fields/Email_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Email_de_l_entreprise__c</fullName>
    <label>Email de l&apos;entreprise</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Email de l&apos;entreprise</labelOverride>
        <masterLabel>Email de l&apos;entreprise</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Email</type>
</CustomField>