force-app/main/default/objects/ssot__Account__dlm/fields/Facture_devis_1__c.field-meta.xml
<CustomField>
    <fullName>Facture_devis_1__c</fullName>
    <label>Facture devis 1</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Facture devis 1</labelOverride>
        <masterLabel>Facture devis 1</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Url</type>
</CustomField>