force-app/main/default/objects/ssot__Account__dlm/fields/Facture_devis_3__c.field-meta.xml
<CustomField>
    <fullName>Facture_devis_3__c</fullName>
    <label>Facture devis 3</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Facture devis 3</labelOverride>
        <masterLabel>Facture devis 3</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Url</type>
</CustomField>