force-app/main/default/objects/ssot__Account__dlm/fields/GCLD__c.field-meta.xml
<CustomField>
    <fullName>GCLD__c</fullName>
    <label>GCLD</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>GCLD</labelOverride>
        <masterLabel>GCLD</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>