force-app/main/default/objects/ssot__Account__dlm/fields/Nom_de_l_entreprise_du_proprietaire__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_l_entreprise_du_proprietaire__c</fullName>
    <label>Nom de l&apos;entreprise du propriétaire</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Nom de l&apos;entreprise du propriétaire</labelOverride>
        <masterLabel>Nom de l&apos;entreprise du propriétaire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>