force-app/main/default/objects/ssot__Account__dlm/fields/Type_de_formulaire__c.field-meta.xml
<CustomField>
    <fullName>Type_de_formulaire__c</fullName>
    <label>Type de formulaire</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Type de formulaire</labelOverride>
        <masterLabel>Type de formulaire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>