force-app/main/default/objects/ssot__Account__dlm/fields/Type_de_partenaire__c.field-meta.xml
<CustomField>
    <fullName>Type_de_partenaire__c</fullName>
    <label>Type de partenaire</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Type de partenaire</labelOverride>
        <masterLabel>Type de partenaire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>