force-app/main/default/objects/ssot__Account__dlm/fields/URL_de_la_page_d_origine__c.field-meta.xml
<CustomField>
    <fullName>URL_de_la_page_d_origine__c</fullName>
    <label>URL de la page d&apos;origine</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>URL de la page d&apos;origine</labelOverride>
        <masterLabel>URL de la page d&apos;origine</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>